--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
+
 <!doctype html>
 <html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Our first responsive web page with HTML5 and CSS3</title>
-		<meta name="description" content="A basic responsive web page – an example from Chapter 1">
+		<title>Our first responsive web page with HTML5 and CSS3</title>		<meta name="description" content="A basic responsive web page – an example from Chapter 1">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
@@ -13,7 +14,34 @@
 			<p class="Strap">Scones: the most resplendent of snacks</p>
 		</div>
 		<div class="IntroWrapper">
-			<p class="IntroText">Occasionally maligned and misunderstood; the scone is a quintessentially British classic.</p>
+			<p class="IntroText">Occasionally maligned and misunderstood; the scone is a quintessentially British classic.</p>			
+          <li>师长</li> 
+
+          <li>夫子</li>
+
+          <li>山长</li> 
+
+          <li>师傅</li>
+
+          <li>师父</li> 
+
+          <li>西席</li>
+
+          <li>师保</li>
+
+          <li>宗师</li>
+
+          <li>教授</li>
+
+          <li>助教</li>
+
+          <li>讲郎</li>
+
+          <li>教谕</li>
+
+          <li>先生</li>
+
+          <li>学官</li>
 			<div class="MoneyShot">
 				<img class="MoneyShotImg" src="img/scones.jpg" alt="Incredible scones" />
 				<p class="ImageCaption">Incredible scones, picture from Wikipedia</p>
@@ -23,28 +51,35 @@
 		<div class="Ingredients">
 			<h3 class="SubHeader">Ingredients</h3>
 			<ul>
-				<li>350g self-raising flour, and a little spare for dusting</li>
-				<li>¼ tsp salt</li>
-				<li>1 tsp baking powder</li>
-				<li>85g butter, cut into cubes</li>
-				<li>3 tbsp caster sugar</li>
-				<li>175ml milk</li>
-				<li>1 tsp vanilla extract</li>
-				<li>squeeze lemon juice (see Know-how below)</li>
-				<li>beaten egg, to glaze</li>
-				<li>jam and clotted cream, to serve</li>
+	 <li>师长，含有视老师为尊长之义，是古时候对教师的尊称之一。《韩非子·五蠹》：“今有不才之子，父母怒之弗为改，乡人谯之弗为动，师长教之弗为变。夫以父母之爱、乡人之行、师长之智，三美加焉，而终不动，其胫毛不改。”</li> 
+
+           <li>夫子，原为孔子门徒对孔子的尊称，后来夫子成为人们对教师的尊称。《论语·子张》：“夫子焉不学，而亦何常师之有！”</li> 
+
+           <li>山长，是历代对山中书院的主讲教师的称谓，其出处源于《荆相近事》。五代十国时期，蒋维东隐居衡山讲学，受业者众多，蒋维东被尊称为“山长”。此后，“山长”成为对教师的一种尊称。元代时，各路、州、府都曾建有书院，设山长。明清沿袭元制，乾隆时期曾一度改称院长，清末仍叫山长。废除科举之后，书院改称学校，山长的称呼废止</li> 
+
+           <li>师傅，古时老师的通称。“师傅”一词原本是太师、太傅、少师、少傅等官职的合称，因为这些职位负责教习太子，所以师傅也成为老师的代称。《谷梁传·昭公十九年》：“羁贯成童，不就师傅，父之罪也。”师傅这一称谓迄今仍在使用，但一般指工商曲艺戏剧等行业的老师。</li> 
+
+           <li>师父，古代有“一日为师终身为父”的说法，所以也将老师尊称为师父。《吕氏春秋·劝学》：“事师之犹事父也。”</li> 
+
+           <li>西席，也称西宾、西宴、讲宾，是对教师的一种尊称。其来源为这样一个典故：汉明帝刘庄当太子时，曾拜桓荣为师，登皇位后，他对桓荣仍十分尊敬，常到桓荣住的太常府内，听桓荣讲经。汉代席地而坐，室内座次以靠西向东为尊。汉明帝虽贵为皇帝，仍然给桓荣安排坐西面东的座席，表示对启蒙老师的尊敬，此后，“西席”或“西宾”就成了对教师的尊称。</li> 
+
+           <li>师保，原为古代辅弼帝王和教导王室子弟的官员，亦师亦保，统称“师保”。《易·系辞下》：“无有师保，如临父母。”后来泛指老师。如清代龚自珍《抱小》：“小学者，子弟之学。学之以侍父兄师保之侧，以待父兄师保之顾问者也。”</li> 
+
+           <li>宗师，原为掌管宗室子弟训导的官员。《汉书·平帝记》：“其为宗室自太上皇以来族亲，各以世氏、郡国置宗师以纠之，致教训焉。”后逐渐演变为众人所崇仰、堪称师表的人。北宋孔平仲《谈苑》卷三：“石介，字守道，徂徕山人也。文章学术，天下宗师，皆呼为徂徕先生。”</li> 
+
+           <li>教授，如今的教授一词是高等教育体系中的一种职称，但在古代太学中则是讲学的博士。中国汉、唐两代太学都设有博士，宋代中央和地方的学校始设教授，元代各路、州、府儒学以及明清两代的府学也都设有教授。</li> 
+
+           <li>助教，在国子监任教的教师。西晋咸宁二年立国子学，始设助教，协调国子祭酒、博士传授儒家经学。此后除个别朝代外，国子监中都设经学助教，称国子助教、太学助教、四门助教、广文助教等。</li> 
+
+           <li>讲郎，原为讲授经书的官员。《后汉书·儒林传》：“又诏高才生受《古文尚书》、《毛诗》、《谷梁》、《左氏春秋》，虽不立学官，然皆擢高第为讲郎。”</li> 
+
+           <li>教谕，原为宋代京师小学和武学中的学官名。明清时期，县设“县儒学”作为一县之最高教育机构，内设教谕一人，另设训导数人。训导是指辅助教谕的助手。府学教谕多	
 			</ul>
 		</div>
 		<div class="HowToMake">
 			<h3 class="SubHeader">Method</h3>
 			<ol class="MethodWrapper">
-				<li>Heat the oven to 220&deg;C (or gas mark 7). Tip the flour into a large bowl along with the salt and baking powder, then mix it all up. Add the butter in, then rub the butter in with your fingers until the mix looks like fine crumbs. When that is done, stir in the sugar.</li>
-				<li>Put the milk into a jug and heat in the microwave for about 20-30 seconds. It should be warm but not hot. Add the vanilla and lemon juice to the milk and then put that to one side and but a baking tray in the oven to warm.</li>
-				<li>Make a well in the dry mix, then add the liquid and combine it quickly with a cutlery knife – it will seem pretty wet at first. Spread some flour onto the work surface and tip the dough out. Dredge the dough and your hands with a little more flour, then fold the dough over 2-3 times until it's smoother. Now pat it into a round shape about 4cm deep.</li>
-				<li>Take a 5cm cutter (Pro-tip – smooth-edged cutters tend to cut more cleanly, giving a better rise) and dip it into some flour. Plunge into the dough, then repeat until you have four scones. By this point you’ll probably need to press what's left of the dough back into a round to cut out another four.</li>
-				<li>Brush the tops with beaten egg, then place onto the hot baking tray.</li>
-				<li>Bake for 10 minutes until risen and golden on the top. Eat just warm or cold on the day of baking, generously (and I do mean generously) topped with jam and clotted cream. </li>
-				<li>If freezing, freeze once cool. Defrost, then put in a low oven (about 160&deg;C) for a few minutes to refresh.</li>
+				<
 			</ol>
 		</div>
 	</body>
