--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Our first responsive web page with HTML5 and CSS3</title>		<meta name="description" content="A basic responsive web page – an example from Chapter 1">
+		<title>好奇心日报 | 古代“老师”有哪些称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<div class="Header">
-			<a href="/" class="LogoWrapper"><img src="img/SOC-Logo.png" alt="Scone O'Clock logo" /></a>
+			<a href="/" class="LogoWrapper"><img src="http://sucimg.itc.cn/avatarimg/1002347b66274f5e91a51234d7576244_1497252508425.png" alt="Scone O'Clock logo" /></a>
 			<p class="Strap">Scones: the most resplendent of snacks</p>
 		</div>
 		<div class="IntroWrapper">
