--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!doctype html>
 <html class="no-js" lang="en">
 	<head>
@@ -11,10 +12,13 @@
 	<body>
 		<div class="Header">
 			<a href="/" class="LogoWrapper"><img src="http://sucimg.itc.cn/avatarimg/1002347b66274f5e91a51234d7576244_1497252508425.png" alt="Scone O'Clock logo" /></a>
-			<p class="Strap">Scones: the most resplendent of snacks</p>
+			<p class="Strap">上游新闻</p>
 		</div>
 		<div class="IntroWrapper">
-			<p class="IntroText">Occasionally maligned and misunderstood; the scone is a quintessentially British classic.</p>			
+			<p class="IntroText">古代“老师”有哪些称谓？
+				<!-- 根據 https://www.bilibili.com/video/av10775939/  --> 
+				<embed height="452" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="https://static-s.bilibili.com/miniloader.swf" flashvars="aid=10775939&page=1" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed> .</p>	
+			
           <li>师长</li> 
 
           <li>夫子</li>
