--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="Header">
-			<a href="/" class="LogoWrapper"><img src="http://sucimg.itc.cn/avatarimg/1002347b66274f5e91a51234d7576244_1497252508425.png" alt="Scone O'Clock logo" /></a>
+			<a href="/" class="LogoWrapper"><img src="//5b0988e595225.cdn.sohucs.com/images/20170910/fe3f19fb992c4feda53ce7e4572ee7bc.jpeg.png" alt="Scone O'Clock logo" /></a>
 			<p class="Strap">上游新闻</p>
 		</div>
 		<div class="IntroWrapper">
