--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="Header">
-			<a href="/" class="LogoWrapper"><img src="//5b0988e595225.cdn.sohucs.com/images/20170910/fe3f19fb992c4feda53ce7e4572ee7bc.jpeg.png" alt="Scone O'Clock logo" /></a>
+			<a href="/" class="LogoWrapper"><img src="//5b0988e595225.cdn.sohucs.com/images/20170910/757c66fbeeb848dfa3dd90c5910b6eb9.jpeg.png" alt="cdn.sohucs.com" /></a>
 			<p class="Strap">上游新闻</p>
 		</div>
 		<div class="IntroWrapper">
