--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="Header">
-			<a href="/" class="LogoWrapper"><img src="//5b0988e595225.cdn.sohucs.com/images/20170910/757c66fbeeb848dfa3dd90c5910b6eb9.jpeg.png" alt="cdn.sohucs.com" /></a>
+			<a href="/" class="LogoWrapper"><img src="http://img1.zazhipu.com/listpic/image/20160618/2016061816120519519.png" alt="img1.zazhipu.com" /></a>
 			<p class="Strap">上游新闻</p>
 		</div>
 		<div class="IntroWrapper">
