--- a/index.html
+++ b/index.html
@@ -18,20 +18,17 @@
 		
 		</div>
 		<div class="IntroWrapper">
-			<p class="IntroText">古代“老师”有哪些称谓？			
-          <li>师长</li> 
+			<p class="IntroText">古代“老师”有哪些称谓？			          <li>师长</li> 
 
           <li>夫子</li>
 
           <li>山长</li> 
-
           <li>师傅</li>
 
 	
           <li>师父</li> 
 
           <li>西席</li>
-
           <li>师保</li>
 
           <li>宗师</li>
@@ -48,11 +45,11 @@
 
           <li>学官</li>
 			<div class="MoneyShot">
-				<img class="MoneyShotImg" src="img/scones.jpg" alt="Incredible scones" />
-				<p class="ImageCaption">Incredible scones, picture from Wikipedia</p>
+				<img class="MoneyShotImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/a14f9d17c19a48e6a1935fdb8c567a92.jpeg" alt="cdn.sohucs.com" />
+				
 			</div>
 		</div>
-		<p>Recipe and serving suggestions follow.</p>
+		
 		<div class="Ingredients">
 			<h3 class="SubHeader">称谓出自何处？</h3>
 			<ul>
@@ -84,7 +81,7 @@
 		<div class="HowToMake">
 			<h3 class="SubHeader">Method</h3>
 			<ol class="MethodWrapper">
-				<
+				
 		<!-- 根據 https://www.bilibili.com/video/av10775939/  --> 
 				<embed height="452" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="https://static-s.bilibili.com/miniloader.swf" flashvars="aid=10775939&page=1" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed> .</p>		
 			
