--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 
 
-
 <!doctype html>
+<!-- 根據 http://www.sohu.com/a/190979066_737391?_f=index_news_23  --> 
 <html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>好奇心日报 | 古代“老师”有哪些称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/styles.css">
+		<p class="好奇心日报 | 古代“老师”有哪些称谓？" p>
 	</head>
 	<body>
 		<div class="Header">
@@ -18,7 +19,9 @@
 		
 		</div>
 		<div class="IntroWrapper">
-			<p class="IntroText">古代“老师”有哪些称谓？			          <li>师长</li> 
+			<p class="IntroText">古代“老师”有哪些称谓？			          
+				
+	  <li>师长</li> 
 
           <li>夫子</li>
 
@@ -40,7 +43,6 @@
           <li>讲郎</li>
 
           <li>教谕</li>
-
           <li>先生</li>
 
           <li>学官</li>
