--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 		<title>好奇心日报 | 古代“老师”有哪些称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/styles.css">
-		<p class="好奇心日报 | 古代“老师”有哪些称谓？" p>
 	</head>
 	<body>
 		<div class="Header">
+			<p class="Strap">好奇心日报 | 古代“老师”有哪些称谓？</p>
 			<a href="/" class="LogoWrapper"><img src="http://img1.zazhipu.com/listpic/image/20160618/2016061816120519519.png" alt="img1.zazhipu.com" /></a>
-			<p class="Strap">上游新闻</p>
-		
+			
 		
 		
 		</div>
