--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>好奇心日报 | 古代“老师”有哪些称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
+		<title>好奇心日报 | 古代“老师”的称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<div class="Header">
-			<p class="Strap">好奇心日报 | 古代“老师”有哪些称谓？</p>
+			<p class="Strap">好奇心日报 | 古代“老师”的称谓？</p>
 			<a href="/" class="LogoWrapper"><img src="http://img1.zazhipu.com/listpic/image/20160618/2016061816120519519.png" alt="img1.zazhipu.com" /></a>
 			
 		
 		
 		</div>
 		<div class="IntroWrapper">
-			<p class="IntroText">古代“老师”有哪些称谓？			          
+ 			<p class="IntroText">古代“老师”有哪些称谓？			          
 				
 	  <li>师长</li> 
 
@@ -45,6 +45,8 @@
           <li>先生</li>
 
           <li>学官</li>
+			
+			
 			<div class="MoneyShot">
 				<img class="MoneyShotImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/a14f9d17c19a48e6a1935fdb8c567a92.jpeg" alt="cdn.sohucs.com" />
 				
