--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="Header">
 			<p class="Strap">好奇心日报 | 古代“老师”的称谓？</p>
 			<a href="/" class="LogoWrapper"><img src="http://img1.zazhipu.com/listpic/image/20160618/2016061816120519519.png" alt="img1.zazhipu.com" /></a>
-			
+			<p class="Strap">　“老师”一词是对在学校中从教者的称谓，“传道、授业、解惑”是其基本职责。“老师”最初指年老资深的学者或传授学术的人，如《史记·孟子荀卿列传》：“齐襄王时，而荀卿最为老师。”后来，人们把教学生的人也称为“老师”，如金代元好问《示侄孙伯安》：“伯安入小学，颖悟非凡儿，属句有夙性，说字惊老师。”明清以来，一般称教师为“先生”。19世纪末，中国现代教育奠基人何子渊先生等辛亥革命元老将“西学”引入中国，创办新式学校后，遂开始在《学生操行规范》里明确将教师称谓定义为“老师”，但绝大部分学生约定俗成将“先生”改称为“老师”，则是从民国时期开始的，并一直沿用至今。</p>
 		
 		
 		</div>
