--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		
 		</div>
 		<div class="IntroWrapper">
+			<img class="IntroWrapperImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/24a0349bd2f843a8b9d8669395156422.jpeg" alt="cdn.sohucs.com" />
  			<p class="IntroText">古代“老师”有哪些称谓？			          
 				
 	  <li>师长</li> 
