--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!doctype html>
 <!-- 根據 http://www.sohu.com/a/190979066_737391?_f=index_news_23  --> 
 <html class="no-js" lang="en">
@@ -20,10 +21,12 @@
 		<div class="IntroWrapper">
 			<img class="IntroWrapperImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/24a0349bd2f843a8b9d8669395156422.jpeg" alt="cdn.sohucs.com" />
  			<p class="IntroText">古代“老师”有哪些称谓？			          
-				
+		<ul>		
 	  <li>师长</li> 
-
-          <li>夫子</li>
+	  <li>师长，含有视老师为尊长之义，是古时候对教师的尊称之一。《韩非子·五蠹》：“今有不才之子，父母怒之弗为改，乡人谯之弗为动，师长教之弗为变。夫以父母之爱、乡人之行、师长之智，三美加焉，而终不动，其胫毛不改。”</li> 
+          <img class="IntroWrapperImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/24a0349bd2f843a8b9d8669395156422.jpeg" alt="cdn.sohucs.com" />
+			
+	<li>夫子</li>
 
           <li>山长</li> 
           <li>师傅</li>
@@ -46,7 +49,7 @@
           <li>先生</li>
 
           <li>学官</li>
-			
+		</ul>	
 			
 			<div class="MoneyShot">
 				<img class="MoneyShotImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/a14f9d17c19a48e6a1935fdb8c567a92.jpeg" alt="cdn.sohucs.com" />
