--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="IntroWrapper">
 			
- 			<p class="IntroText">古代“老师”有哪些称谓？			          
+ 			<p class="IntroText">古代“老师”有哪些称谓？</p>			          
 		<ul>		
 	  <li>师长</li> 
 	  <li>师长，含有视老师为尊长之义，是古时候对教师的尊称之一。《韩非子·五蠹》：“今有不才之子，父母怒之弗为改，乡人谯之弗为动，师长教之弗为变。夫以父母之爱、乡人之行、师长之智，三美加焉，而终不动，其胫毛不改。”</li> 
