--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		</div>
 		<div class="IntroWrapper">
 			
- 			<p class="IntroText">古代“老师”有哪些称谓？</p>			          
-		<ul>		
-	  <li>师长</li> 
-	  <li>师长，含有视老师为尊长之义，是古时候对教师的尊称之一。《韩非子·五蠹》：“今有不才之子，父母怒之弗为改，乡人谯之弗为动，师长教之弗为变。夫以父母之爱、乡人之行、师长之智，三美加焉，而终不动，其胫毛不改。”</li> 
+ 	  <p class="IntroText">古代“老师”有哪些称谓？</p>			          
+				
+	  <p><strong>师长</strong></p> 
+	  <p>师长，含有视老师为尊长之义，是古时候对教师的尊称之一。《韩非子·五蠹》：“今有不才之子，父母怒之弗为改，乡人谯之弗为动，师长教之弗为变。夫以父母之爱、乡人之行、师长之智，三美加焉，而终不动，其胫毛不改。”</p> 
           <img class="IntroWrapperImg" src="http://5b0988e595225.cdn.sohucs.com/images/20170908/24a0349bd2f843a8b9d8669395156422.jpeg" alt="cdn.sohucs.com" />
 	<li>夫子</li>	
  	<li>夫子，原为孔子门徒对孔子的尊称，后来夫子成为人们对教师的尊称。《论语·子张》：“夫子焉不学，而亦何常师之有！”</li>
