--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<title>好奇心日报 | 古代“老师”的称谓？</title>		<meta name="description" content="原标题：好奇心日报 | 古代“老师”有哪些称谓?">
 		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<div class="Header">
